# tekkamaki

./: .Rbuildignore  .gitignore  .travis.yml  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  authors.html  codecov.yml  configure  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  format-check.yaml  test-coverage.yaml  test-coverage.yml
R/: RcppExports.R  blackthunnus.R  cpp11.R  genealogy.R  graph.R  hsp.R  hsp2.R  kinship.R  nbinom.R  package.R  parameter.R  path.R  plot.R  pop.R  pop2.R  read.R  sampled.R  snp.R  sysdata.rda  tekka.R  tekkamaki-package.R  vcf.R
articles/: index.html  kinship.html  snp.html  tekkamaki.html
data-raw/: kinlabels.R
demo/: 00Index  kinship.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: demography.html  index.html  kinship.html  snp.html  tekkamaki.html
docs/reference/: blackthunnus.html  genealogy.html  graph.html  hsp.html  index.html  kinship.html  make_snp.html  nbinom.html  param-getter.html  parameter.html  path.html  plot.html  pop.html  read.html  reexports.html  snp.html  tekka.html  tekkamaki-package.html  vcf.html
man/: blackthunnus.Rd  genealogy.Rd  graph.Rd  hsp.Rd  hsp2.Rd  kinship.Rd  nbinom.Rd  param-getter.Rd  parameter.Rd  path.Rd  plot.Rd  pop.Rd  pop2.Rd  read.Rd  reexports.Rd  sampled.Rd  snp.Rd  tekka.Rd  tekkamaki-package.Rd  tekkamaki.Rd  vcf.Rd
reference/: add_pos_id.html  augment.html  blackthunnus.html  count_uncoalesced.html  genealogy.html  graph.html  hsp.html  hsp2.html  index.html  kinship.html  nbinom.html  param-getter.html  parameter.html  path.html  plot.genealogy.html  plot.html  pop.html  pop2.html  read.html  read_hsp.html  read_hsp2.html  read_pop.html  read_pop2.html  reexports.html  sampled.html  snp.html  tekka.html  tekka_version.html  tekkamaki-package.html  tekkamaki.html  vcf.html
src/: CMakeLists.txt  RcppExports.cpp  code.cpp  config.cpp.in  cpp11.cpp  getter.cpp  nbinom.cpp  run.cpp
tests/: testthat.R
tests/testthat/: test-kinship.R  test-misc.R  test-plot.R  test-run.R  test-snp.R  test-vcf.R
vignettes/: kinship.Rmd  snp.Rmd  tekkamaki.Rmd
